Fix description markdown (#758)
* Fix description markdown

- Adjust wrong cutoff length in courses.go (150 => 100)
- Update UI
- Add list css

* Add dark mode classes

* Remove 'truncated'

- Increase CutOffLength to 256
- Remove truncated variables but keep 'truncateHtml' function

--- a/web/assets/css/main.css
+++ b/web/assets/css/main.css
@@ -414,3 +414,8 @@ a.fc-event, a.fc-event:hover {
 .overflow-wrap-anywhere {
     overflow-wrap: anywhere;
 }
+
+.video-description ul {
+    list-style-type: disc;
+    margin-left: 16px;
+}
